remove oddball.tf images

--- a/src/index.pug
+++ b/src/index.pug
@@ -22,13 +22,13 @@ html
         meta(name='google-site-verification', content='bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE')
         meta(property='og:title', content='Steam.Design')
         meta(property='og:type', content='website')
-        meta(property='og:image', content='https://i.oddball.tf/WFODru7.png')
+        meta(property='og:image', content='images/SocialBanner.png')
         meta(property='og:url', content='https://steam.design/')
         meta(property='og:description', content='A small tool to crop Steam profile backgrounds to showcases.')
         meta(name='twitter:card', content='summary_large_image')
         meta(name='twitter:title', content='Steam.Design')
         meta(name='twitter:description', content='A small tool to crop Steam profile backgrounds to showcases.')
-        meta(name='twitter:image', content='https://i.oddball.tf/WFODru7.png')
+        meta(name='twitter:image', content='images/SocialBanner.png')
         meta(name='twitter:url', content='https://steam.design/')
 
         link(href='./css/index.styl', rel='stylesheet', type='text/css')
