--- a/src/pug/partners.pug
+++ b/src/pug/partners.pug
@@ -5,7 +5,7 @@
         .profile_group.profile_primary_group
             .profile_group_avatar
                 a(href='https://designerlist.guide/' target="_blank" rel="noopener noreferrer")
-                    img(src='https://i.oddball.tf/AspGoS4.jpg', width='64')
+                    img(src='images/List.jpg', width='64')
             a.whiteLink(href='https://designerlist.guide/' target="_blank" rel="noopener noreferrer") Safe Designer List
             .profile_group_membercount A list of safe, verified artwork designers on Steam.
             div(style='clear: left;')
@@ -15,14 +15,14 @@
         .profile_group.profile_primary_group
             .profile_group_avatar
                 a(href='https://www.steamladder.com/' target="_blank" rel="noopener noreferrer")
-                    img(src='https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f4/f4b94e8c28be9b33d6abf3a4f3a5ff5fcd43be82_medium.jpg')
+                    img(src='images/ladder.jpg')
             a.whiteLink(href='https://www.steamladder.com/' target="_blank" rel="noopener noreferrer") Steam Ladder
             .profile_group_membercount Leaderboard and ranking site for Steam profiles!
             div(style='clear: left;')
         .profile_group.profile_primary_group
             .profile_group_avatar
                 a(href='https://steamcommunity.com/groups/ArtworkProfiles' target="_blank" rel="noopener noreferrer")
-                    img(src='https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/a8/a8dbf5dc460745146602a2e9b61b25d7aebfed09_medium.jpg')
+                    img(src='images/ap.jpg')
             a.whiteLink(href='https://steamcommunity.com/groups/ArtworkProfiles' target="_blank" rel="noopener noreferrer") Artwork Profiles
             .profile_group_membercount Celebrating the beauty of Steam profiles.
             div(style='clear: left;')
