add steam sign in image to local files

--- a/src/index.pug
+++ b/src/index.pug
@@ -54,7 +54,7 @@ html
                                 href="https://steamcommunity.com/openid/login?openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&openid.mode=checkid_setup&openid.return_to=http%3A%2F%2Fsteam.design%2Findex.html%23login&openid.realm=http%3A%2F%2Fsteam.design&openid.ns.sreg=http%3A%2F%2Fopenid.net%2Fextensions%2Fsreg%2F1.1&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select"
                                 class="name"
                             )
-                                img(src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_01.png"
+                                img(src="images/steamsignin.png"
                                     width="129"
                                     height="25"
                                 )
@@ -272,7 +272,7 @@ html
                             .rColAds#nn_mpu1
                             .underfr(width='268')
                             include pug/partners.pug
- 
+
                         #nn_lb2
             div(style='clear: both;')
         #footer_spacer
