--- a/src/index.pug
+++ b/src/index.pug
@@ -5,18 +5,18 @@ html
         title Steam.Design
 
         meta(name='keywords', content='steam, profile, crop, steam profile, background crop, background crop tool, background, backgrounds, valve, steamdesign, design')
-        link(rel='apple-touch-icon', sizes='180x180', href='./images/apple-touch-icon.png')
-        link(rel='icon', type='image/png', sizes='32x32', href='./images/favicon-32x32.png')
+        link(rel='apple-touch-icon', sizes='180x180', href='./images/favicon/apple-touch-icon.png')
+        link(rel='icon', type='image/png', sizes='32x32', href='./images/favicon/favicon-32x32.png')
         link(rel='manifest', href='./manifest.webmanifest')
-        link(rel='mask-icon', href='./images/safari-pinned-tab.svg', color='#12151a')
-        link(rel='shortcut icon', href='./images/favicon.ico')
+        link(rel='mask-icon', href='./images/favicon/safari-pinned-tab.svg', color='#12151a')
+        link(rel='shortcut icon', href='./images/favicon/favicon.ico')
 
         link(href="https://steamcdn-a.akamaihd.net" rel="preconnect" crossorigin)
 
         meta(name='apple-mobile-web-app-title', content='Steam.Design')
         meta(name='description', content='A small tool to crop Steam profile backgrounds to showcases. Make your profile awesome today!')
         meta(name='application-name', content='Steam.Design')
-        meta(name='msapplication-config', content='./images/browserconfig.xml')
+        meta(name='msapplication-config', content='./images/favicon/browserconfig.xml')
         meta(name='msapplication-TileColor', content='#12151a')
         meta(name='theme-color', content='#12151a')
         meta(name='google-site-verification', content='bohKQMzUSNTnkPrEz27bgyzAFbTAOWhFTgKwrnejHEE')
