Move fonts to local folders

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -1,4 +1,4 @@
-@import './motiva_sans.css'
+@import './motiva_sans.styl'
 @import './buttons.styl'
 @import './shared_global.styl'
 @import './globalv2.styl'
