--- a/src/css/newui.styl
+++ b/src/css/newui.styl
@@ -107,8 +107,8 @@
 .commentthread_textarea
     border none
 
-.social-likes__widget
-    border-radius 3px !important
+// .social-likes__widget
+//     border-radius 3px !important
 
 .discordImage
     left 6px
@@ -147,15 +147,15 @@
     border-radius 7px
     height 25px
 
-.social-likes .social-likes__widget
-    margin 0 5px 0 5px
+// .social-likes .social-likes__widget
+//     margin 0 5px 0 5px
 
 .profile_summary_social
     display: flex
 
-.profile_summary_social .social-likes
-    margin 0
-    min-height: 20px
+// .profile_summary_social .social-likes
+//     margin 0
+//     min-height: 20px
 
 
 .profile_count_link
