--- a/src/css/shared_global.styl
+++ b/src/css/shared_global.styl
@@ -64,7 +64,7 @@
     */
 
 .newmodal {
-    font-family: "Motiva Sans", Sans-serif;
+    font-family: Sans-serif;
     font-weight: normal;
     /* normal */
     position: absolute;
@@ -183,7 +183,7 @@ div#global_header {
     background: #171a21;
     background-position: center top;
     min-width: 940px;
-    font-family: "Motiva Sans", Sans-serif;
+    font-family: Sans-serif;
     font-weight: normal;
     /* normal */
     font-size: 14px;
