Add steamlevels partner

--- a/src/pug/partners.pug
+++ b/src/pug/partners.pug
@@ -33,3 +33,10 @@
             a.whiteLink(href='https://www.steamwishlistcalculator.com/' target="_blank" rel="noopener noreferrer") Steam Wishlist Calculator
             .profile_group_membercount Calculate the total cost of your Steam wishlist!
             div(style='clear: left;')
+        .profile_group.profile_primary_group
+            .profile_group_avatar
+                a(href='https://steamlevels.com/r/steamdesign' target="_blank" rel="noopener noreferrer")
+                    img(src='images/steamlevels.jpg')
+            a.whiteLink(href='https://steamlevels.com/r/steamdesign' target="_blank" rel="noopener noreferrer") SteamLevels
+            .profile_group_membercount A fast and extremely easy way to level up your profile!
+            div(style='clear: left;')
