Add avatarcropper banner and update dependencies

--- a/src/pug/partners.pug
+++ b/src/pug/partners.pug
@@ -9,6 +9,13 @@
             a.whiteLink(href='https://designerlist.guide/' target="_blank" rel="noopener noreferrer") Safe Designer List
             .profile_group_membercount A list of safe, verified artwork designers on Steam.
             div(style='clear: left;')
+        .profile_group.profile_primary_group
+            .profile_group_avatar
+                a(href='https://avatarcropper.com/' target="_blank" rel="noopener noreferrer")
+                    img(src='images/List.jpg', width='64')
+            a.whiteLink(href='https://avatarcropper.com/' target="_blank" rel="noopener noreferrer") Quick Avatar Cropper
+            .profile_group_membercount A small webpage that allows you to quickly crop avatars for many sites.
+            div(style='clear: left;')
     .profile_count_link.ellipsis(style='margin-top:25px')
         span.partnerLabel Our Partners
     .profile_count_link_preview(style='margin-top:25px')
