Stupid ball forgot to add the image..

--- a/src/pug/partners.pug
+++ b/src/pug/partners.pug
@@ -12,7 +12,7 @@
         .profile_group.profile_primary_group
             .profile_group_avatar
                 a(href='https://avatarcropper.com/' target="_blank" rel="noopener noreferrer")
-                    img(src='images/List.jpg', width='64')
+                    img(src='images/AvatarCropper.jpg.jpg', width='64')
             a.whiteLink(href='https://avatarcropper.com/' target="_blank" rel="noopener noreferrer") Quick Avatar Cropper
             .profile_group_membercount A small webpage that allows you to quickly crop avatars for many sites.
             div(style='clear: left;')
