Quick and dirty fix to new steam profiles

--- a/src/css/profilev2.styl
+++ b/src/css/profilev2.styl
@@ -17,7 +17,7 @@ div.profile_page.has_profile_background {
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     div.profile_page.has_profile_background {
-        background-position: 49.999% 0;
+        background-position: calc(49.999% + 15px) 15px;
     }
 }
 
