--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -156,3 +156,13 @@ a,
 .profile_count_link_preview
     img
         border-radius 4px
+
+#cSize
+    bottom 14px
+    left 1px
+
+.profile_content
+    width 956px
+
+.profile_header_bg
+    max-width: 980px
