--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -96,12 +96,12 @@
 
 .top_hint
     display inline-block
-    width 550px
     text-align center
     color #5491cf
     font-weight bold
     position relative
     top 2px
+    margin 0 10px
     &:hover
         text-decoration underline
 
@@ -166,3 +166,8 @@ a,
 
 .profile_header_bg
     max-width: 980px
+
+.guide
+    width 550px
+    text-align center
+
