--- a/src/index.pug
+++ b/src/index.pug
@@ -45,6 +45,8 @@ html
                     span.guide(style='float:left; position:relative; left:23%;')
                         a.top_hint(href='https://steamcommunity.com/sharedfiles/filedetails/?id=299701202')
                             | Our Guide!
+                        a.top_hint(href='https://next.steam.design')
+                            | Beta version!
                     #invbuttons(style='float:right;margin-bottom:9px;')
                         #refreshInventory.fa.fa-refresh(title='Refresh Inventory', style='position:relative; top:2px; left:-20px; cursor:pointer; display:none;')
                         #hideBacksList.fa.fa-arrow-up(title='Hide Inventory', style='position:relative; top:2px; left:-15px; cursor:pointer; display:none;')
