add adsense tag

--- a/src/index.pug
+++ b/src/index.pug
@@ -322,6 +322,8 @@ html
             "https://www.google-analytics.com/analytics.js", i.parentNode.insertBefore(c, i)
             }(window, document, "script", 0, "ga"), ga("create", "UA-98294219-1", "auto"), ga("send", "pageview"));
 
+        <script data-ad-client="ca-pub-1034829471687394" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
         //- NetworkN code
         //- script(src="https://steam.design/networkn.min.js")
         //- script.
