--- a/src/index.pug
+++ b/src/index.pug
@@ -30,7 +30,7 @@ html
         meta(name='twitter:description', content='A small tool to crop Steam profile backgrounds to showcases.')
         meta(name='twitter:image', content='images/SocialBanner.png')
         meta(name='twitter:url', content='https://steam.design/')
-
+        meta(name= 'google-site-verification', content='YFdRARWJZHGUqSw6XOvk0flqYQ9S6mGUN13T20uZrYQ')
         link(href='./css/index.styl', rel='stylesheet', type='text/css')
     body
         .spin.unspin.fa-spin(style='display: none')
