Add new site link

--- a/src/pug/partners.pug
+++ b/src/pug/partners.pug
@@ -4,6 +4,14 @@
     .profile_count_link_preview(style='margin-top:25px')
         .profile_group.profile_primary_group
             .profile_group_avatar
+                a(href='https://center.steam.design/' target="_blank" rel="noopener noreferrer")
+                    img(src='images/text-center.svg', width='64')
+            a.whiteLink(href='https://center.steam.design/' target="_blank" rel="noopener noreferrer") Text Center Tool
+            .profile_group_membercount Website that helps you center text in steam showcases.
+            div(style='clear: left;')
+
+        .profile_group.profile_primary_group
+            .profile_group_avatar
                 a(href='https://designerlist.guide/' target="_blank" rel="noopener noreferrer")
                     img(src='images/List.jpg', width='64')
             a.whiteLink(href='https://designerlist.guide/' target="_blank" rel="noopener noreferrer") Safe Designer List
