Remove networkn ads, add steam level ads

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -171,3 +171,9 @@ a,
     width 550px
     text-align center
 
+.profile_video
+    width 268px
+    margin 0 0 10px 0
+
+    video
+        width 100%
