--- a/src/pug/partners.pug
+++ b/src/pug/partners.pug
@@ -1,4 +1,6 @@
 .profile_group_links.profile_count_link_preview_ctn.responsive_groupfriends_element
+    a.profile_video(href='https://steamlevels.com/r/steamdesign' target="_blank" rel="noopener noreferrer")
+        video(src="images/steam_levels.mp4" playsinline loop muted autoplay)
     .profile_count_link.ellipsis
         span.partnerLabel Our Other Projects
     .profile_count_link_preview(style='margin-top:25px')
