--- a/src/index.pug
+++ b/src/index.pug
@@ -312,8 +312,14 @@ html
             }, e[o].l = 1 * new Date, c = t.createElement(a), i = t.getElementsByTagName(a)[0], c.async = 1, c.src =
             "https://www.google-analytics.com/analytics.js", i.parentNode.insertBefore(c, i)
             }(window, document, "script", 0, "ga"), ga("create", "UA-98294219-1", "auto"), ga("send", "pageview"));
+        <!-- Global site tag (gtag.js) - Google Analytics -->
 
+        script(async src="https://www.googletagmanager.com/gtag/js?id=UA-98294219-6")
+        script.
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-
+            gtag('config', 'UA-98294219-6');
 
         #customizeBackground.newmodal_background(style='opacity: 0.8; display: none;')
