--- a/src/index.pug
+++ b/src/index.pug
@@ -43,10 +43,10 @@ html
                         | Filter: 
                         input#filterIn(type='text')
                     span.guide(style='float:left; position:relative; left:23%;')
-                        a.top_hint(href='https://steamcommunity.com/sharedfiles/filedetails/?id=299701202')
-                            | Our Guide!
-                        a.top_hint(href='https://next.steam.design')
-                            | Beta version!
+                        a.top_hint(href='https://bgs.steam.design/?utm_source=old.steam.design')
+                            | Backgrounds
+                        a.top_hint(href='https://steam.design/?utm_source=old.steam.design')
+                            | New version!
                     #invbuttons(style='float:right;margin-bottom:9px;')
                         #refreshInventory.fa.fa-refresh(title='Refresh Inventory', style='position:relative; top:2px; left:-20px; cursor:pointer; display:none;')
                         #hideBacksList.fa.fa-arrow-up(title='Hide Inventory', style='position:relative; top:2px; left:-15px; cursor:pointer; display:none;')
