--- a/src/index.pug
+++ b/src/index.pug
@@ -10,6 +10,7 @@ html
         link(rel='manifest', href='./manifest.webmanifest')
         link(rel='mask-icon', href='./images/favicon/safari-pinned-tab.svg', color='#12151a')
         link(rel='shortcut icon', href='./images/favicon/favicon.ico')
+        meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover")
 
         link(href="https://steamcdn-a.akamaihd.net" rel="preconnect" crossorigin)
 
