--- a/src/index.pug
+++ b/src/index.pug
@@ -44,7 +44,7 @@ html
                         | Filter: 
                         input#filterIn(type='text')
                     span.guide(style='float:left; position:relative; left:23%;')
-                        a.top_hint(href='https://bgs.steam.design/?utm_source=old.steam.design')
+                        a.top_hint(href='https://backgrounds.gallery/?utm_source=old.steam.design')
                             | Backgrounds
                         a.top_hint(href='https://steam.design/?utm_source=old.steam.design')
                             | New version!
